--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 </head>
 <body>
 
-  <h1>¿Quieres salir conmigo, mi amor? 💕</h1>
+  <h1>¿Quieres salir conmigo, mi bebé? 💕</h1>
 
   <div class="buttons">
     <button id="btn-si">SÍ 😍</button>
@@ -109,7 +109,7 @@
 
   <div class="invitacion" id="invitacion">
     <div class="corazon">💖</div>
-    <h2>¡Sabía que dirías que sí! 🥰</h2>
+    <h2>¡Dessi, sabía que dirías que sí! 🥰</h2>
     
     <h3>Cita el 14 de febrero</h3>
     <h3>a las 7:00 pm</h3>
